updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -182,6 +182,11 @@ Index
 - [`filter()`](Piwik/DataTable/Filter/GroupBy.md#filter) &mdash; _Method in class_ [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md)
 - [`filter()`](Piwik/DataTable/Filter/Limit.md#filter) &mdash; _Method in class_ [`Limit`](Piwik/DataTable/Filter/Limit.md)
 - [`filter()`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md#filter) &mdash; _Method in class_ [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md)
+- [`filter()`](Piwik/DataTable/Filter/Pattern.md#filter) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
+- [`filter()`](Piwik/DataTable/Filter/PatternRecursive.md#filter) &mdash; _Method in class_ [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md)
+- [`filter()`](Piwik/DataTable/Filter/ReplaceColumnNames.md#filter) &mdash; _Method in class_ [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md)
+- [`filter()`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md#filter) &mdash; _Method in class_ [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md)
+- [`filter()`](Piwik/DataTable/Filter/Sort.md#filter) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
 - [`filter()`](Piwik/DataTable/Filter/Truncate.md#filter) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
 - [`filter()`](Piwik/DataTable/Map.md#filter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`factory()`](Piwik/Date.md#factory) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
@@ -245,6 +250,7 @@ Index
 - [`getRangeLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getRangeLabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
 - [`getUnboundedLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getUnboundedLabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
 - [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`getPatternQuoted()`](Piwik/DataTable/Filter/Pattern.md#getPatternQuoted) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
 - [`getKeyName()`](Piwik/DataTable/Map.md#getKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`getRowsCount()`](Piwik/DataTable/Map.md#getRowsCount) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`getDataTables()`](Piwik/DataTable/Map.md#getDataTables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
@@ -476,6 +482,7 @@ Index
 - [`makeFromSimpleArray()`](Piwik/DataTable.md#makeFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`MetadataCallbackReplace`](Piwik/DataTable/Filter/MetadataCallbackReplace.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`match()`](Piwik/DataTable/Filter/Pattern.md#match) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
 - [`Map`](Piwik/DataTable/Map.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
 - [`mergeChildren()`](Piwik/DataTable/Map.md#mergeChildren) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`mergeSubtables()`](Piwik/DataTable/Map.md#mergeSubtables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
@@ -497,6 +504,7 @@ Index
 
 ### N
 
+- [`naturalSort()`](Piwik/DataTable/Filter/Sort.md#naturalSort) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
 - [`now()`](Piwik/Date.md#now) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`N2P()`](Piwik/IP.md#N2P) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`Nonce`](Piwik/Nonce.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -514,6 +522,8 @@ Index
 - [`Period`](Piwik/ArchiveProcessor/Period.md) &mdash; _Class in namespace_ [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
 - [`prefixTable()`](Piwik/Common.md#prefixTable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`prependPlusSignToNumber()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#prependPlusSignToNumber) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
+- [`Pattern`](Piwik/DataTable/Filter/Pattern.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`P2N()`](Piwik/IP.md#P2N) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`prettyPrint()`](Piwik/IP.md#prettyPrint) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`Period`](Piwik/Period.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -537,6 +547,8 @@ Index
 - [`renameModule()`](Piwik/API/Request.md#renameModule) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`reloadAuthUsingTokenAuth()`](Piwik/API/Request.md#reloadAuthUsingTokenAuth) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`renameColumn()`](Piwik/DataTable.md#renameColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`renameColumn()`](Piwik/DataTable/Map.md#renameColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`Row`](Piwik/DataTable/Row.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
 - [`renameColumn()`](Piwik/DataTable/Row.md#renameColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
@@ -566,6 +578,10 @@ Index
 - [`setMetadataValues()`](Piwik/DataTable.md#setMetadataValues) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setAllTableMetadata()`](Piwik/DataTable.md#setAllTableMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMaximumAllowedRows()`](Piwik/DataTable.md#setMaximumAllowedRows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`Sort`](Piwik/DataTable/Filter/Sort.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`setOrder()`](Piwik/DataTable/Filter/Sort.md#setOrder) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
+- [`sort()`](Piwik/DataTable/Filter/Sort.md#sort) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
+- [`sortString()`](Piwik/DataTable/Filter/Sort.md#sortString) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
 - [`setKeyName()`](Piwik/DataTable/Map.md#setKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`sumSubtable()`](Piwik/DataTable/Row.md#sumSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`setSubtable()`](Piwik/DataTable/Row.md#setSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
@@ -697,6 +713,11 @@ Index
 - [`__construct()`](Piwik/DataTable/Filter/Limit.md#__construct) &mdash; _Method in class_ [`Limit`](Piwik/DataTable/Filter/Limit.md)
 - [`__construct()`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md#__construct) &mdash; _Method in class_ [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md)
 - [`__construct()`](Piwik/DataTable/Filter/MetadataCallbackReplace.md#__construct) &mdash; _Method in class_ [`MetadataCallbackReplace`](Piwik/DataTable/Filter/MetadataCallbackReplace.md)
+- [`__construct()`](Piwik/DataTable/Filter/Pattern.md#__construct) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
+- [`__construct()`](Piwik/DataTable/Filter/PatternRecursive.md#__construct) &mdash; _Method in class_ [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md)
+- [`__construct()`](Piwik/DataTable/Filter/ReplaceColumnNames.md#__construct) &mdash; _Method in class_ [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md)
+- [`__construct()`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md#__construct) &mdash; _Method in class_ [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md)
+- [`__construct()`](Piwik/DataTable/Filter/Sort.md#__construct) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
 - [`__construct()`](Piwik/DataTable/Filter/Truncate.md#__construct) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
 - [`__toString()`](Piwik/DataTable/Map.md#__toString) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`__construct()`](Piwik/DataTable/Row.md#__construct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
