updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -5,8 +5,9 @@ This is a complete list of available classes:
 
 - [`Piwik\API\Request`](Piwik/API/Request.md) &mdash; Dispatches API requests to the appropriate API method.
 - [`Piwik\Archive`](Piwik/Archive.md) &mdash; The **Archive** class is used to query cached analytics statistics (termed &quot;archive data&quot;).
-- [`Piwik\ArchiveProcessor\Day`](Piwik/ArchiveProcessor/Day.md) &mdash; This class
-- [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; This class provides generic methods to archive data for a period (week / month / year).
+- [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor.md) &mdash; Used to insert numeric and blob archive data.
+- [`Piwik\ArchiveProcessor\Day`](Piwik/ArchiveProcessor/Day.md) &mdash; Initiates the archiving process for **day** periods via the [ArchiveProcessor.Day.compute](#) event.
+- [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; Initiates the archiving process for all non-day periods via the [ArchiveProcessor.Period.compute](#) event.
 - [`Piwik\Common`](Piwik/Common.md) &mdash; Contains helper methods used by both Piwik Core and the Piwik Tracking engine.
 - [`Piwik\Config`](Piwik/Config.md) &mdash; Singleton that provides read &amp; write access to Piwik&#039;s INI configuration.
 - [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; The primary data structure used to store analytics data in Piwik.
