--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -29,6 +29,7 @@ Index
 ### A
 
 - [`Archive`](Piwik/Archive.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`ArchiveProcessor`](Piwik/ArchiveProcessor.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`aggregateDataTableReports()`](Piwik/ArchiveProcessor/Period.md#aggregateDataTableReports) &mdash; _Method in class_ [`Period`](Piwik/ArchiveProcessor/Period.md)
 - [`aggregateNumericMetrics()`](Piwik/ArchiveProcessor/Period.md#aggregateNumericMetrics) &mdash; _Method in class_ [`Period`](Piwik/ArchiveProcessor/Period.md)
 - [`applyQueuedFilters()`](Piwik/DataTable.md#applyQueuedFilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -218,6 +219,10 @@ Index
 - [`getDataTableFromArchive()`](Piwik/Archive.md#getDataTableFromArchive) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
 - [`getParams()`](Piwik/Archive.md#getParams) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
 - [`getPluginForReport()`](Piwik/Archive.md#getPluginForReport) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
+- [`getLogAggregator()`](Piwik/ArchiveProcessor.md#getLogAggregator) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
+- [`getPeriod()`](Piwik/ArchiveProcessor.md#getPeriod) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
+- [`getSite()`](Piwik/ArchiveProcessor.md#getSite) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
+- [`getSegment()`](Piwik/ArchiveProcessor.md#getSegment) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
 - [`getDataTableFromDataArray()`](Piwik/ArchiveProcessor/Day.md#getDataTableFromDataArray) &mdash; _Method in class_ [`Day`](Piwik/ArchiveProcessor/Day.md)
 - [`getMetricsForDimension()`](Piwik/ArchiveProcessor/Day.md#getMetricsForDimension) &mdash; _Method in class_ [`Day`](Piwik/ArchiveProcessor/Day.md)
 - [`getRequestVar()`](Piwik/Common.md#getRequestVar) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
@@ -417,6 +422,9 @@ Index
 
 ### I
 
+- [`insertNumericRecords()`](Piwik/ArchiveProcessor.md#insertNumericRecords) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
+- [`insertNumericRecord()`](Piwik/ArchiveProcessor.md#insertNumericRecord) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
+- [`insertBlobRecord()`](Piwik/ArchiveProcessor.md#insertBlobRecord) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
 - [`isEqual()`](Piwik/DataTable.md#isEqual) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`isSubtableLoaded()`](Piwik/DataTable/Row.md#isSubtableLoaded) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`isSummaryRow()`](Piwik/DataTable/Row.md#isSummaryRow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
