updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -46,18 +46,16 @@ This is a complete list of available classes:
 - [`Piwik\IP`](Piwik/IP.md) &mdash; Contains IP address helper functions (for both IPv4 and IPv6).
 - [`Piwik\Log`](Piwik/Log.md) &mdash; Logging utility class.
 - [`Piwik\Mail`](Piwik/Mail.md) &mdash; Class for sending mails, for more information see: [http://framework.zend.com/manual/en/zend.mail.html](#http://framework.zend.com/manual/en/zend.mail.html)
-- [`Piwik\Menu\MenuAdmin`](Piwik/Menu/MenuAdmin.md)
-- [`Piwik\Menu\MenuTop`](Piwik/Menu/MenuTop.md)
+- [`Piwik\Menu\MenuAbstract`](Piwik/Menu/MenuAbstract.md) &mdash; Base class for classes that manage one of Piwik&#039;s menus.
+- [`Piwik\Menu\MenuAdmin`](Piwik/Menu/MenuAdmin.md) &mdash; Contains menu entries for the Admin menu.
+- [`Piwik\Menu\MenuMain`](Piwik/Menu/MenuMain.md) &mdash; Contains menu entries for the Main menu (the menu displayed under the Piwik logo).
+- [`Piwik\Menu\MenuTop`](Piwik/Menu/MenuTop.md) &mdash; Contains menu entries for the Top menu (the menu at the very top of the page).
 - [`Piwik\Metrics`](Piwik/Metrics.md) &mdash; This class contains metadata regarding core metrics and contains several related helper functions.
 - [`Piwik\MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; Contains helper function that format numerical values in different ways.
 - [`Piwik\Nonce`](Piwik/Nonce.md) &mdash; Nonce class.
 - [`Piwik\Option`](Piwik/Option.md) &mdash; Convenient key-value storage for user specified options and temporary data that needs to be persisted beyond one request.
 - [`Piwik\Period`](Piwik/Period.md) &mdash; Date range representation.
-- [`Piwik\Period\Day`](Piwik/Period/Day.md)
-- [`Piwik\Period\Month`](Piwik/Period/Month.md)
-- [`Piwik\Period\Range`](Piwik/Period/Range.md) &mdash; from a starting date to an ending date
-- [`Piwik\Period\Week`](Piwik/Period/Week.md)
-- [`Piwik\Period\Year`](Piwik/Period/Year.md)
+- [`Piwik\Period\Range`](Piwik/Period/Range.md) &mdash; Arbitrary date range representation.
 - [`Piwik\Piwik`](Piwik/Piwik.md) &mdash; Main piwik helper class.
 - [`Piwik\Plugin`](Piwik/Plugin.md) &mdash; Base class of all Plugin Descriptor classes.
 - [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Parent class of all plugins Controllers (located in /plugins/PluginName/Controller.php It defines some helper functions controllers can use.
