--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -59,10 +59,10 @@ Index
 - [`addHour()`](Piwik/Date.md#addHour) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addHourTo()`](Piwik/Date.md#addHourTo) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addPeriod()`](Piwik/Date.md#addPeriod) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
+- [`add()`](Piwik/Menu/MenuAbstract.md#add) &mdash; _Method in class_ [`MenuAbstract`](Piwik/Menu/MenuAbstract.md)
 - [`addEntry()`](Piwik/Menu/MenuAdmin.md#addEntry) &mdash; _Method in class_ [`MenuAdmin`](Piwik/Menu/MenuAdmin.md)
 - [`addEntry()`](Piwik/Menu/MenuTop.md#addEntry) &mdash; _Method in class_ [`MenuTop`](Piwik/Menu/MenuTop.md)
 - [`advancedFactory()`](Piwik/Period.md#advancedFactory) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
-- [`addSubperiod()`](Piwik/Period/Day.md#addSubperiod) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`addAction()`](Piwik/Piwik.md#addAction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`assignTemplateVar()`](Piwik/Plugin/Visualization.md#assignTemplateVar) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
@@ -146,7 +146,6 @@ Index
 - [`discardNonce()`](Piwik/Nonce.md#discardNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`delete()`](Piwik/Option.md#delete) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`deleteLike()`](Piwik/Option.md#deleteLike) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
-- [`Day`](Piwik/Period/Day.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`deactivate()`](Piwik/Plugin.md#deactivate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`displayWarningIfConfigFileNotWritable()`](Piwik/Plugin/ControllerAdmin.md#displayWarningIfConfigFileNotWritable) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
 - [`Daily`](Piwik/ScheduledTime/Daily.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
@@ -287,6 +286,7 @@ Index
 - [`getLastIpFromList()`](Piwik/IP.md#getLastIpFromList) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`getHostByAddr()`](Piwik/IP.md#getHostByAddr) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`getInstance()`](Piwik/Log.md#getInstance) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
+- [`getMenu()`](Piwik/Menu/MenuMain.md#getMenu) &mdash; _Method in class_ [`MenuMain`](Piwik/Menu/MenuMain.md)
 - [`getVisitsMetricNames()`](Piwik/Metrics.md#getVisitsMetricNames) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
 - [`getMappingFromIdToName()`](Piwik/Metrics.md#getMappingFromIdToName) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
 - [`getUnit()`](Piwik/Metrics.md#getUnit) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
@@ -317,25 +317,12 @@ Index
 - [`getLocalizedShortString()`](Piwik/Period.md#getLocalizedShortString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`getLocalizedLongString()`](Piwik/Period.md#getLocalizedLongString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`getRangeString()`](Piwik/Period.md#getRangeString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
-- [`getPrettyString()`](Piwik/Period/Day.md#getPrettyString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
-- [`getLocalizedShortString()`](Piwik/Period/Day.md#getLocalizedShortString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
-- [`getLocalizedLongString()`](Piwik/Period/Day.md#getLocalizedLongString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
-- [`getNumberOfSubperiods()`](Piwik/Period/Day.md#getNumberOfSubperiods) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
-- [`getLocalizedShortString()`](Piwik/Period/Month.md#getLocalizedShortString) &mdash; _Method in class_ [`Month`](Piwik/Period/Month.md)
-- [`getLocalizedLongString()`](Piwik/Period/Month.md#getLocalizedLongString) &mdash; _Method in class_ [`Month`](Piwik/Period/Month.md)
-- [`getPrettyString()`](Piwik/Period/Month.md#getPrettyString) &mdash; _Method in class_ [`Month`](Piwik/Period/Month.md)
 - [`getLocalizedShortString()`](Piwik/Period/Range.md#getLocalizedShortString) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`getLocalizedLongString()`](Piwik/Period/Range.md#getLocalizedLongString) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`getDateStart()`](Piwik/Period/Range.md#getDateStart) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`getPrettyString()`](Piwik/Period/Range.md#getPrettyString) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`getDateEnd()`](Piwik/Period/Range.md#getDateEnd) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`getLastDate()`](Piwik/Period/Range.md#getLastDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
-- [`getLocalizedShortString()`](Piwik/Period/Week.md#getLocalizedShortString) &mdash; _Method in class_ [`Week`](Piwik/Period/Week.md)
-- [`getLocalizedLongString()`](Piwik/Period/Week.md#getLocalizedLongString) &mdash; _Method in class_ [`Week`](Piwik/Period/Week.md)
-- [`getPrettyString()`](Piwik/Period/Week.md#getPrettyString) &mdash; _Method in class_ [`Week`](Piwik/Period/Week.md)
-- [`getLocalizedShortString()`](Piwik/Period/Year.md#getLocalizedShortString) &mdash; _Method in class_ [`Year`](Piwik/Period/Year.md)
-- [`getLocalizedLongString()`](Piwik/Period/Year.md#getLocalizedLongString) &mdash; _Method in class_ [`Year`](Piwik/Period/Year.md)
-- [`getPrettyString()`](Piwik/Period/Year.md#getPrettyString) &mdash; _Method in class_ [`Year`](Piwik/Period/Year.md)
 - [`getCurrentUserEmail()`](Piwik/Piwik.md#getCurrentUserEmail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getSuperUserLogin()`](Piwik/Piwik.md#getSuperUserLogin) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getSuperUserEmail()`](Piwik/Piwik.md#getSuperUserEmail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
@@ -439,6 +426,7 @@ Index
 - [`isMappedIPv4()`](Piwik/IP.md#isMappedIPv4) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`isIpInRange()`](Piwik/IP.md#isIpInRange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`info()`](Piwik/Log.md#info) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
+- [`isUrlFound()`](Piwik/Menu/MenuMain.md#isUrlFound) &mdash; _Method in class_ [`MenuMain`](Piwik/Menu/MenuMain.md)
 - [`isLowerValueBetter()`](Piwik/Metrics.md#isLowerValueBetter) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
 - [`isMultiplePeriod()`](Piwik/Period.md#isMultiplePeriod) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`isUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#isUserIsSuperUserOrTheUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
@@ -497,7 +485,9 @@ Index
 - [`$maxVisitsSummed()`](Piwik/DataTable/Row.md#$maxVisitsSummed) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`mkdir()`](Piwik/Filesystem.md#mkdir) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`Mail`](Piwik/Mail.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`MenuAbstract`](Piwik/Menu/MenuAbstract.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
 - [`MenuAdmin`](Piwik/Menu/MenuAdmin.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
+- [`MenuMain`](Piwik/Menu/MenuMain.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
 - [`MenuTop`](Piwik/Menu/MenuTop.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
 - [`Metrics`](Piwik/Metrics.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$mappingFromIdToName()`](Piwik/Metrics.md#$mappingFromIdToName) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
@@ -505,7 +495,6 @@ Index
 - [`$mappingFromNameToId()`](Piwik/Metrics.md#$mappingFromNameToId) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
 - [`MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`makePeriodFromQueryParams()`](Piwik/Period.md#makePeriodFromQueryParams) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
-- [`Month`](Piwik/Period/Month.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`$methodName()`](Piwik/ScheduledTask.md#$methodName) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`$methodParameter()`](Piwik/ScheduledTask.md#$methodParameter) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
@@ -563,7 +552,6 @@ Index
 - [`removeSubtable()`](Piwik/DataTable/Row.md#removeSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`releaseDbLock()`](Piwik/Db.md#releaseDbLock) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`Range`](Piwik/Period/Range.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
-- [`removePeriod()`](Piwik/Period/Range.md#removePeriod) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`redirectToModule()`](Piwik/Piwik.md#redirectToModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`redirectToIndex()`](Piwik/Plugin/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`$requestConfig()`](Piwik/Plugin/ViewDataTable.md#$requestConfig) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
@@ -654,8 +642,6 @@ Index
 - [`toString()`](Piwik/Date.md#toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`today()`](Piwik/Date.md#today) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`toString()`](Piwik/Period.md#toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
-- [`toString()`](Piwik/Period/Day.md#toString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
-- [`toString()`](Piwik/Period/Year.md#toString) &mdash; _Method in class_ [`Year`](Piwik/Period/Year.md)
 - [`translate()`](Piwik/Piwik.md#translate) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`translateException()`](Piwik/Piwik.md#translateException) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`TaskScheduler`](Piwik/TaskScheduler.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -685,7 +671,6 @@ Index
 
 - [`walkPath()`](Piwik/DataTable.md#walkPath) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`warning()`](Piwik/Log.md#warning) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
-- [`Week`](Piwik/Period/Week.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 - [`WidgetsList`](Piwik/WidgetsList.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 
@@ -693,7 +678,6 @@ Index
 
 - [`yesterday()`](Piwik/Date.md#yesterday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`yesterdaySameTime()`](Piwik/Date.md#yesterdaySameTime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
-- [`Year`](Piwik/Period/Year.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 
 ### _
 
@@ -736,7 +720,6 @@ Index
 - [`__construct()`](Piwik/Mail.md#__construct) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
 - [`__construct()`](Piwik/Period.md#__construct) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`__toString()`](Piwik/Period.md#__toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
-- [`__toString()`](Piwik/Period/Day.md#__toString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
