updated plugins API documentation

--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -12,5 +12,6 @@ This is a complete list of available namespaces:
 - [`Piwik\Period`](Piwik/Period)
 - [`Piwik\Plugin`](Piwik/Plugin)
 - [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
+- [`Piwik\Settings`](Piwik/Settings)
 - [`Piwik\Tracker`](Piwik/Tracker)
 - [`Piwik\ViewDataTable`](Piwik/ViewDataTable)
