--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -71,6 +71,8 @@ This is a complete list of available classes:
 - [`Piwik\Segment`](Piwik/Segment.md) &mdash; Limits the set of visits Piwik uses when aggregating analytics data.
 - [`Piwik\SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; Contains helper methods that can be used to get common Piwik settings.
 - [`Piwik\SettingsServer`](Piwik/SettingsServer.md) &mdash; Contains helper methods that can be used to get information regarding the server, its settings and PHP settings.
+- [`Piwik\Settings\SystemSetting`](Piwik/Settings/SystemSetting.md) &mdash; System wide setting.
+- [`Piwik\Settings\UserSetting`](Piwik/Settings/UserSetting.md) &mdash; Per user setting.
 - [`Piwik\Singleton`](Piwik/Singleton.md) &mdash; The singleton class restricts the instantiation of a class to one object only.
 - [`Piwik\Site`](Piwik/Site.md) &mdash; Provides access to individual site data (such as name, URL, etc.).
 - [`Piwik\TaskScheduler`](Piwik/TaskScheduler.md) &mdash; Manages scheduled task execution.
