--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -556,6 +556,7 @@ Index
 - [`$requestConfig()`](Piwik/Plugin/ViewDataTable.md#$requestConfig) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`render()`](Piwik/Plugin/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`RankingQuery`](Piwik/RankingQuery.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`removeAllUserSettingsForUser()`](Piwik/Settings/UserSetting.md#removeAllUserSettingsForUser) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
 - [`runTasks()`](Piwik/TaskScheduler.md#runTasks) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
 - [`redirectToReferrer()`](Piwik/Url.md#redirectToReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
@@ -625,6 +626,8 @@ Index
 - [`Segment`](Piwik/Segment.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`SettingsServer`](Piwik/SettingsServer.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`SystemSetting`](Piwik/Settings/SystemSetting.md) &mdash; _Class in namespace_ [`Piwik\Settings`](Piwik/Settings)
+- [`setUserLogin()`](Piwik/Settings/UserSetting.md#setUserLogin) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
 - [`Singleton`](Piwik/Singleton.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`setSingletonInstance()`](Piwik/Singleton.md#setSingletonInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
 - [`Site`](Piwik/Site.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -652,6 +655,7 @@ Index
 - [`unlockAllTables()`](Piwik/Db.md#unlockAllTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`unlinkRecursive()`](Piwik/Filesystem.md#unlinkRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`uninstall()`](Piwik/Plugin.md#uninstall) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`UserSetting`](Piwik/Settings/UserSetting.md) &mdash; _Class in namespace_ [`Piwik\Settings`](Piwik/Settings)
 - [`unsetInstance()`](Piwik/Singleton.md#unsetInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
 - [`Url`](Piwik/Url.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`UrlHelper`](Piwik/UrlHelper.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -727,6 +731,8 @@ Index
 - [`__construct()`](Piwik/RankingQuery.md#__construct) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`__construct()`](Piwik/ScheduledTask.md#__construct) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`__construct()`](Piwik/Segment.md#__construct) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
+- [`__construct()`](Piwik/Settings/SystemSetting.md#__construct) &mdash; _Method in class_ [`SystemSetting`](Piwik/Settings/SystemSetting.md)
+- [`__construct()`](Piwik/Settings/UserSetting.md#__construct) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
 - [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__toString()`](Piwik/Site.md#__toString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__construct()`](Piwik/View.md#__construct) &mdash; _Method in class_ [`View`](Piwik/View.md)
