updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -10,6 +10,7 @@ This is a complete list of available classes:
 - [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; Initiates the archiving process for all non-day periods via the [ArchiveProcessor.Period.compute](#) event.
 - [`Piwik\Common`](Piwik/Common.md) &mdash; Contains helper methods used by both Piwik Core and the Piwik Tracking engine.
 - [`Piwik\Config`](Piwik/Config.md) &mdash; Singleton that provides read &amp; write access to Piwik&#039;s INI configuration.
+- [`Piwik\DataAccess\LogAggregator`](Piwik/DataAccess/LogAggregator.md) &mdash; Contains methods that aggregates log data (visits, actions, conversions, ecommerce).
 - [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; The primary data structure used to store analytics data in Piwik.
 - [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter.md) &mdash; A filter is set of logic that manipulates a DataTable.
 - [`Piwik\DataTable\Filter\AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md) &mdash; Adds the following columns to a DataTable using metrics that already exist:  - **conversion_rate**: percent value of `nb_conversions / nb_visits - **nb_actions_per_visit**: `nb_actions / nb_visits` - **avg_time_on_site**: in number of seconds, `round(visit_length / nb_visits)`.
@@ -58,7 +59,9 @@ This is a complete list of available classes:
 - [`Piwik\Period\Range`](Piwik/Period/Range.md) &mdash; Arbitrary date range representation.
 - [`Piwik\Piwik`](Piwik/Piwik.md) &mdash; Main piwik helper class.
 - [`Piwik\Plugin`](Piwik/Plugin.md) &mdash; Base class of all Plugin Descriptor classes.
-- [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Parent class of all plugins Controllers (located in /plugins/PluginName/Controller.php It defines some helper functions controllers can use.
+- [`Piwik\Plugin\API`](Piwik/Plugin/API.md) &mdash; The base class of all API singletons.
+- [`Piwik\Plugin\Archiver`](Piwik/Plugin/Archiver.md) &mdash; The base class that should be extended by plugins that archive their own metrics.
+- [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Base class of all plugin Controllers.
 - [`Piwik\Plugin\ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; Parent class of all plugins Controllers with admin functions
 - [`Piwik\Plugin\ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; This class is used to load (from the API) and customize the output of a given DataTable.
 - [`Piwik\Plugin\Visualization`](Piwik/Plugin/Visualization.md) &mdash; Base class for all DataTable visualizations.
