--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -65,6 +65,10 @@ Index
 - [`advancedFactory()`](Piwik/Period.md#advancedFactory) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`addAction()`](Piwik/Piwik.md#addAction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`API`](Piwik/Plugin/API.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
+- [`Archiver`](Piwik/Plugin/Archiver.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
+- [`archiveDay()`](Piwik/Plugin/Archiver.md#archiveDay) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
+- [`archivePeriod()`](Piwik/Plugin/Archiver.md#archivePeriod) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
 - [`assignTemplateVar()`](Piwik/Plugin/Visualization.md#assignTemplateVar) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`afterGenericFiltersAreAppliedToLoadedDataTable()`](Piwik/Plugin/Visualization.md#afterGenericFiltersAreAppliedToLoadedDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`afterAllFilteresAreApplied()`](Piwik/Plugin/Visualization.md#afterAllFilteresAreApplied) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
@@ -461,6 +465,7 @@ Index
 
 ### L
 
+- [`LogAggregator`](Piwik/DataAccess/LogAggregator.md) &mdash; _Class in namespace_ [`Piwik\DataAccess`](Piwik/DataAccess)
 - [`Limit`](Piwik/DataTable/Filter/Limit.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`$lockPrivilegeGranted()`](Piwik/Db.md#$lockPrivilegeGranted) &mdash; _Property in class_ [`Db`](Piwik/Db.md)
 - [`lockTables()`](Piwik/Db.md#lockTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
@@ -533,6 +538,7 @@ Index
 
 ### Q
 
+- [`queryVisitsByDimension()`](Piwik/DataAccess/LogAggregator.md#queryVisitsByDimension) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
 - [`queueFilter()`](Piwik/DataTable.md#queueFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`queueFilter()`](Piwik/DataTable/Map.md#queueFilter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`query()`](Piwik/Db.md#query) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
@@ -608,6 +614,7 @@ Index
 - [`setFrom()`](Piwik/Mail.md#setFrom) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
 - [`set()`](Piwik/Option.md#set) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`setDefaultEndDate()`](Piwik/Period/Range.md#setDefaultEndDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
+- [`shouldArchive()`](Piwik/Plugin/Archiver.md#shouldArchive) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
 - [`setHostValidationVariablesView()`](Piwik/Plugin/Controller.md#setHostValidationVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`setPeriodVariablesView()`](Piwik/Plugin/Controller.md#setPeriodVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`setBasicVariablesAdminView()`](Piwik/Plugin/ControllerAdmin.md#setBasicVariablesAdminView) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
@@ -725,6 +732,7 @@ Index
 - [`__toString()`](Piwik/Period.md#__toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`__construct()`](Piwik/Plugin/Archiver.md#__construct) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
 - [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`__construct()`](Piwik/Plugin/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`__construct()`](Piwik/Plugin/Visualization.md#__construct) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
